# Sponge

./: .clang-format  .gitignore  CMakeLists.txt  README.md  plan-dbIndexSharding.prompt.md  vcpkg.json
doc/: test_result.md
resource/: config.toml  server.crt  server.key
scripts/: scaffold_cpp.sh
src/: CMakeLists.txt  redis_server.cpp  sponge_server.cpp
src/base/: CMakeLists.txt  spg_base_config.h  spg_base_config.h.in  spg_base_file.cpp  spg_base_file.h  spg_base_file.test.cpp  spg_base_io_context_pool.cpp  spg_base_io_context_pool.h  spg_base_io_context_pool.test.cpp  spg_base_utility.cpp  spg_base_utility.h  spg_base_utility.test.cpp
src/core/: CMakeLists.txt  spg_core_application_context.cpp  spg_core_application_context.h  spg_core_application_context.test.cpp  spg_core_commands.cpp  spg_core_commands.h  spg_core_commands.test.cpp  spg_core_dash_table.cpp  spg_core_dash_table.h  spg_core_dash_table.test.cpp  spg_core_database.cpp  spg_core_database.h  spg_core_database.test.cpp  spg_core_resp_parser.cpp  spg_core_resp_parser.h  spg_core_resp_parser.test.cpp  spg_core_server.cpp  spg_core_server.h  spg_core_server.test.cpp  spg_core_session.cpp  spg_core_session.h  spg_core_session.test.cpp  spg_core_string_view_hash.cpp  spg_core_string_view_hash.h  spg_core_string_view_hash.test.cpp  spg_core_tracking_resource.cpp  spg_core_tracking_resource.h  spg_core_tracking_resource.test.cpp
src/http/: CMakeLists.txt  spg_http_config.cpp  spg_http_config.h  spg_http_config.test.cpp  spg_http_server.cpp  spg_http_server.h  spg_http_server.test.cpp  spg_http_ssl_session.cpp  spg_http_ssl_session.h  spg_http_ssl_session.test.cpp
src/redis/: CMakeLists.txt  spg_redis_alias.cpp  spg_redis_alias.h  spg_redis_alias.test.cpp  spg_redis_channel.cpp  spg_redis_channel.h  spg_redis_channel.test.cpp  spg_redis_command_runtime.cpp  spg_redis_command_runtime.h  spg_redis_command_runtime.test.cpp  spg_redis_commands.cpp  spg_redis_commands.h  spg_redis_commands.test.cpp  spg_redis_commands_common.cpp  spg_redis_commands_common.h  spg_redis_commands_string.cpp  spg_redis_commands_string.h  spg_redis_database.cpp  spg_redis_database.h  spg_redis_database.test.cpp  spg_redis_reply.cpp  spg_redis_reply.h  spg_redis_reply.test.cpp  spg_redis_resp.cpp  spg_redis_resp.h  spg_redis_resp.test.cpp  spg_redis_server.cpp  spg_redis_server.h  spg_redis_server.test.cpp  spg_redis_session.cpp  spg_redis_session.h  spg_redis_session.test.cpp
